Fixed bug where weather was off centered in mobile
Also made minor updates to font size in mobile

--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@
 
   .info-container {
     padding-top: 2em;
-    font-size: 50px;
+    font-size: 40px;
   }
 
   .input-group {
@@ -114,5 +114,11 @@
   .input-group input:focus ~ label,
   .input-group input:valid ~ label {
     font-size: 18px;
+  }
+
+  #homepage-btns {
+    margin: 1rem auto -2rem;
+    float: none;
+    text-align: center;
   }
 }
