--- a/src/features/quote/Quote.css
+++ b/src/features/quote/Quote.css
@@ -14,6 +14,6 @@
 
 @media only screen and (max-width: 450px) {
   .quote-group {
-    font-size: 16px;
+    font-size: 18px;
   }
 }
